# wgpu_studies

./: Cargo.toml  README.md  build.rs
src/: camera.rs  lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/shaders/: light.wgsl  particle.wgsl  particles_bb.wgsl  shader.wgsl
src/stardust/: mod.rs
