# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wgpu_studies"
version = "0.1.0"
authors = ["Nelson Kossuga <nelsonkossuga@gmail.com>"]
edition = "2021"

# Used for web support - requires folder setups, I think
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "something_that_you_make_up"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
env_logger = "0.9"
winit = "0.27"
log = "0.4"
wgpu = "0.14"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

