# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "wgpu_studies"
version = "0.1.0"
authors = ["Nelson Kossuga <nelsonkossuga@gmail.com>"]
edition = "2021"

# Used for web support - requires folder setups, I think
[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "something_that_you_make_up"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
instant = "0.1"
cgmath = "0.18"
typed-builder = "0.11.0"
winit = "0.27"
env_logger = "0.9"
rand = "0.8.5"
log = "0.4"
pollster = "0.2"
wgpu = "0.14"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.2.1", features = [
    "async",
]}
 


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = { version = "0.11" }
 